style.css
:root{
    --primary: #F5F5EF;
    --secondary: #1F2839;
    --accent: #B69D74;
}

*{
    margin: 0;
}

html{
    font-family: "Fredoka", sans-serif;
    background-color: var(--primary);
    scroll-behavior: smooth;
}

a{
    text-decoration: none;
    color: var(--primary);
}

a:hover{
    text-decoration: underline var(--accent);
    color: var(--accent);
}

ul{
    list-style-type: none;
}

button{
    padding: 10px;
    background-color: var(--secondary);
    border-color: var(--primary);
    border-radius: 10px;
    width: 150px;
    color: var(--primary);
    align-items: center;
    justify-content: center;
    font-family: "Fredoka", sans-serif;
}

.title{
    font-size: 50px;
    color: var(--accent);
}

.header{
    color: var(--accent);
}

/* Nav Bar */
nav{
    background-color: var(--secondary);
    border-bottom: 2px #1F2839 solid;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    min-width: 370px;
    border-bottom: 2px var(--primary) solid;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    box-sizing: border-box;
}

#nav-list{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 50%;
    gap: 10px;
}

#cv{
    border: 2px var(--primary) solid;
    border-radius: 10px;
    padding: 10px;
}

#cv:hover{
    border: 2px var(--accent) solid;
}

.active-element{
    color: var(--accent);
    font-weight: 500;
}

/* Home Section */
#home-section{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    gap: 50px;
    justify-content: center;
    align-items: center;
    background-color: var(--primary);
    max-height: 700px;
    padding: 20px;
    height: auto;
    flex-wrap: wrap;
    padding-top: 150px;
    padding-bottom: 300px;
    border-bottom: 2px var(--secondary) solid;
}

#portrait{
    height: 70%;
    width: 100%;
    min-width: 300px;
    max-width: 600px;
    min-height: 300px;
    max-height: 800px;
    object-fit: cover;
    border: 2px var(--secondary) solid;
    flex: 3;
    border-radius: 10px;
}

#about-container{
    display: flex;
    flex-direction: column;
    flex: 3;
    height: 100%;
    justify-content: center;
    width: 100%;
    max-width: 700px;
    align-items: center;
}

#about-text{
    padding: 10px;
    width: 100%;
    min-width: 200px;
    box-sizing: border-box;
    border-left: 2px var(--secondary) solid;
}

/* Technologies Section */
#technologies-section{
    padding-top: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 25px;
    width: 100%;
    padding-bottom: 300px;
    border-bottom: 2px var(--secondary) solid;
    background-color: var(--secondary);
}

#technologies-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: var(--primary);
    width: 50%;
    padding: 20px;
    border-radius: 20px;
}

#technologies-content{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 80%;
    gap: 100px;
    padding: 100px;
}

.technologies-img{
    width: 150px;
    height: 150px;
    object-fit: contain;
}

.technology{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

/* Project Section */
#project-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 50px;
}

#projects-section .title {
    padding-top: 50px;
    text-align: center;
}

#project-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
    padding: 100px;
    gap: 100px;
}

.project{
    display: flex;
    flex-direction: row;
    width: 90%;
    max-width: 1000px;
    min-width: 300px;
    height: auto;
    min-height: 200px;
    max-height: 500px;
    background-color: var(--secondary);
}

.project-img-container {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 600px;
    height: 500px;
}

.project-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.project-contents {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    gap: 20px;
    color: var(--primary);
}
.project-description{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.project-buttons{
    width: 100%;
}

.used-technologies{
    display: flex;
    flex-direction: row;
    align-items: center;
}

.used-technologies-img{
    width: 100%;
    height: 100%;
    max-width: 50px;
    object-fit: fill;
}

.css-used{
    max-width: 37px;
}

.sql-used{
    max-width: 40px;
}

.left{
    margin-right: auto;
}

.right{
    margin-left: auto;
    flex-direction: row-reverse;
}

/* Responsiveness */
@media (max-width: 650px){
    html{
        font-size: 14px;
    }

    .title{
        font-size: 30px;
        color: var(--accent);
    }

    #home-section, #technologies-section{
        padding-bottom: 150px;
    }

    .project {
        flex-direction: column !important;
        height: auto;
        max-height: 700px;
    }
    
    .project-img-container {
        width: 100%;
        height: auto;
        max-height: 300px;
        overflow: hidden;
    }
    
    .project-img {
        max-width: 100%;
        max-height: 100%;
        width: auto;
        height: auto;
        object-fit: contain;
    }

    .project-img-container,
    .project-img {
        box-sizing: border-box;
    }
}

